name:                isomorphism
version:             0.1
synopsis:            Total isomorphisms and invariant functors
description:         A representation for total isomorphisms: an arrow paired with its inverse.  Classes for invariant functors and monoidal functors.  Includes a number of useful isomorphisms and operations, as well as interoperability with related packages.
license:             BSD3
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2016
category:            Data, Control
build-type:          Simple
cabal-version:       >=1.20

flag semigroupoids
  description: Support the semigroupoids package

flag invariant
  description: Support the invariant package

flag lens
  description: Support the lens package

flag HList
  description: Support the HList package

library
  other-modules:     
    Data.Isomorphism.Internal
  exposed-modules:     
    Data.Isomorphism.Type
    Data.Isomorphism.TH
    Data.Isomorphism.Prelude
    Data.Isomorphism.Arrow
    Data.Isomorphism.Bits
    Data.Isomorphism.Bool
    Data.Isomorphism.Coerce
    Data.Isomorphism.Complex
    Data.Isomorphism.Either
    Data.Isomorphism.Function
    Data.Isomorphism.Functor
    Data.Isomorphism.List
    Data.Isomorphism.Maybe
    Data.Isomorphism.Ord
    Data.Isomorphism.Tuple
    Data.Isomorphism
    Control.Invariant.Functor
    Control.Invariant.Monoidal

  build-depends:       
    base >= 4.8 && <5,
    haskell-src-meta == 0.6.*,
    template-haskell == 2.*
  default-language:    Haskell2010
  default-extensions: TypeOperators, QuasiQuotes
  ghc-options: -Wall

  if flag(semigroupoids)
    exposed-modules: Data.Isomorphism.Semigroupoid
    build-depends: semigroupoids >= 4 (Data.Semigroupoid, Data.Groupoid, Data.Isomorphism as Data.Semigroupoid.Isomorphism)

  if flag(invariant)
    exposed-modules: Data.Isomorphism.Invariant
    build-depends: invariant

  if flag(lens)
    exposed-modules: Data.Isomorphism.Lens
    build-depends: lens == 4.*

  if flag(HList)
    exposed-modules: Data.Isomorphism.HList
    build-depends: HList == 0.4.*
