name:                invertible-conduit
version:             0
synopsis:            Bi-directional (reversible) conduits
description:
license:             BSD3
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2017
category:            Composition, Conduit
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1

source-repository head
  type: git
  location: https://github.com/dylex/invertible

flag xml
  description: Support for xml-conduit streaming

library
  exposed-modules:
    Data.Conduit.Arrow
    Data.Conduit.Invertible
    Data.Conduit.Flush
  build-depends:
    base >= 4.8 && <5,
    transformers,
    conduit,
    invertible
  default-language:    Haskell2010
  ghc-options: -Wall

  if flag(xml)
    exposed-modules: Text.XML.Stream.Invertible
    build-depends:
      exceptions,
      text,
      xml-conduit,
      xml-types
